
classDiagram
    class Accelerometer {
        + ReadSensor(): List
        <Reading>
    }
    class Buzzer {
        - State: string
        + ControlActuator(command: Command): bool
    }
    class GeolocationController {
        + Buzzer
        + GPS
        + Accelerometer
    }
    class GPS {
        + ReadSensor(): List
        <Reading>
    }
    class Reading {
        - Type: string
        - Unit: string
        - Value: string
    }
    
    GeolocationController "1" -- "many" Buzzer : Contains
    GeolocationController "1" -- "many" GPS : Contains
    GeolocationController "1" -- "many" Accelerometer : Contains
    Accelerometer "1" -- "many" Reading : Generates
    GPS "1" -- "many" Reading : Generates
    Buzzer "1" -- "many" Reading : Generates